<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:visibility="visible"
    android:id="@+id/gl_sensor_info"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:rowCount="8"
    android:columnCount="2"
    android:padding="4dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:paddingHorizontal="2dp"
        android:textStyle="bold"
        android:text="@string/sensors" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="2dp"
        android:text="@string/accelerometer" />
    <TextView
        android:id="@+id/tv_has_accelerometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="2dp"
        android:text="@string/gyroscope" />
    <TextView
        android:id="@+id/tv_has_gyroscope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="2dp"
        android:text="@string/magnetometer" />
    <TextView
        android:id="@+id/tv_has_magnetometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="2dp"
        android:text="@string/game_rotation_vector" />
    <TextView
        android:id="@+id/tv_has_game_rotation_vector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="2dp"
        android:text="@string/rotation_vector" />
    <TextView
        android:id="@+id/tv_has_rotation_vector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="2dp"
        android:text="@string/linear_acceleration" />
    <TextView
        android:id="@+id/tv_has_linear_acceleration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="2dp"
        android:text="@string/gravity" />
    <TextView
        android:id="@+id/tv_has_gravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1" />

</GridLayout>