<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="60dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_window_idx"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/window_idx"
            android:textStyle="bold"
            android:textAlignment="center"
            style="@style/ActivityLabelText"/>

        <!-- Row template repeated 6 times -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_dws"
                style="@style/ActivityLabelText"/>

            <TextView
                android:id="@+id/pct_dws"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0%"
                style="@style/ActivityPercentText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_ups"
                style="@style/ActivityLabelText"/>

            <TextView
                android:id="@+id/pct_ups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0%"
                style="@style/ActivityPercentText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_wlk"
                style="@style/ActivityLabelText"/>

            <TextView
                android:id="@+id/pct_wlk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0%"
                style="@style/ActivityPercentText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_jog"
                style="@style/ActivityLabelText"/>

            <TextView
                android:id="@+id/pct_jog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0%"
                style="@style/ActivityPercentText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_std"
                style="@style/ActivityLabelText"/>

            <TextView
                android:id="@+id/pct_std"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0%"
                style="@style/ActivityPercentText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_sit"
                style="@style/ActivityLabelText"/>

            <TextView
                android:id="@+id/pct_sit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0%"
                style="@style/ActivityPercentText"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            tools:text="Error: schema mismatch"
            />

    </LinearLayout>
</ScrollView>