<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.AnalysisActivity">

    <GridLayout
        android:id="@+id/gl_session_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:columnCount="2"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"

            android:textSize="28sp"

            android:text="@string/session"
            />
        <TextView
            android:id="@+id/tv_session_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="28sp"

            tools:text="1"
            />

        <TextView
            android:id="@+id/tv_session_keyword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_marginBottom="6dp"

            android:textSize="22sp"

            tools:text="route_1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="18sp"

            android:text="@string/samples_label"
            />
        <TextView
            android:id="@+id/tv_sample_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="18sp"

            tools:text="12345"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="18sp"

            android:text="@string/duration_label"
            />
        <TextView
            android:id="@+id/tv_session_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="18sp"

            tools:text="1 h, 3 min, 56 sec"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="18sp"

            android:text="@string/start_label"
            />
        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="18sp"

            tools:text="03:12:45"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="18sp"

            android:text="@string/stop_label"
            />
        <TextView
            android:id="@+id/tv_stop_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="18sp"

            tools:text="03:13:24"
            />

    </GridLayout>

    <LinearLayout

        android:id="@+id/ll_analysis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"

        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@id/gl_session_info"
        app:layout_constraintVertical_bias="0.4"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/analysis_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_output_analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="18sp"
            tools:text="analysis output..." />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_output_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.5"

        android:textSize="18sp"

        tools:text="message output..."
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_window_bars"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="60dp"

        app:layout_constraintTop_toBottomOf="@id/gl_session_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"

        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        tools:listitem="@layout/item_window_bar"
        />

    <TextView
        android:id="@+id/tv_session_breakdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        app:layout_constraintBottom_toTopOf="@id/rv_window_bars"
        app:layout_constraintLeft_toLeftOf="parent"

        android:text="@string/session_breakdown"
        android:textSize="22sp"
        android:textStyle="bold"
        />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pie_chart"
        android:layout_width="match_parent"
        android:layout_height="300dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.8"
        />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.65"

        android:textSize="22sp"
        android:text="DEBUG version"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>