<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_session_list"
        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintTop_toBottomOf="@id/ll_collection_stats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_session_info"
        android:paddingBottom="260dp"
        android:clipToPadding="false"
        />

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.9"

        android:layout_margin="8dp"
        >

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            tools:text="Collecting..."
            android:layout_gravity="center_horizontal"
            />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/start"
            android:textSize="22sp"
            android:minHeight="68dp"
            android:minWidth="130dp"
            />

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/stop"
            android:textSize="22sp"
            android:minHeight="68dp"
            android:minWidth="130dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_collection_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_margin="8dp"
        >

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="48sp"
            tools:text="00:30"
            />

        <TextView
            android:id="@+id/tv_samples_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/samples_label"
            />

        <TextView
            android:id="@+id/tv_sample_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            tools:text="1234567889"
            />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_keyword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"

        app:layout_constraintLeft_toRightOf="@id/ll_collection_stats"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rv_session_list"
        app:layout_constraintVertical_bias="1.0"

        android:hint="@string/hint_session_keyword"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:maxLines="1"
            android:inputType="text"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:maxLength="32"

            tools:text="qwerty \nqwerty qwerty qwerty qwerty \n qwerty qwerty "
            />

    </com.google.android.material.textfield.TextInputLayout>

<!--    TODO: use link-styled TextView instead-->
    <ImageButton
        android:id="@+id/btn_sensor_info"
        android:layout_width="40dp"
        android:layout_height="40dp"

        android:contentDescription="@string/sensors_info"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="4dp"

        android:src="@drawable/ic_info"
        android:scaleType="fitCenter"
        android:background="?selectableItemBackground"
        />

</androidx.constraintlayout.widget.ConstraintLayout>